--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<ul class="menu">
 							<li class="menu-item current-menu-item"><a href="index.html">Home</a></li>
 							<li class="menu-item"><a href="albums.html">Albums</a></li>
-							<li class="menu-item"><a href="https://github.com/Thuso-Ray/synisterwaves/blob/main/singles.html">Singles</a></li>
+							<li class="menu-item"><a href="singles.html">Singles</a></li>
 							<li class="menu-item"><a href="about.html">About</a></li>
 							<li class="menu-item"><a href="contact.html">Contact</a></li>
 						</ul> <!-- .menu -->
