--- a/singles.html
+++ b/singles.html
@@ -68,7 +68,7 @@
 								
 							</div>
 								<div class="filterable-item concert">
-									<a href="dummy/large-gallery/gallery-1.jpg"><figure><img src="https://www.mediafire.com/view/iz9noovryeykn5u/cover.jpg/file" alt="gallery 1"></figure></a>
+									<a href="https://www.mediafire.com/view/iz9noovryeykn5u/cover.jpg/file"><figure><img src="https://www.mediafire.com/view/iz9noovryeykn5u/cover.jpg/file" alt="gallery 1"></figure></a>
 								<div class="item">
 									<h3 class="item-title">Ryan Raymore - <br>This is it (feat. LetshohlaJr)</h3>
 									<span class="year">2020</span>
