--- a/albums.html
+++ b/albums.html
@@ -53,7 +53,7 @@
 							
 							<div class="filterable-items">
 								<div class="filterable-item concert">
-									<a href="dummy/large-gallery/gallery-1.jpg"><figure><img src="https://www.mediafire.com/view/ark4esnrhh8u6uw/Cover.jpg/file" alt="gallery 1"></figure></a>
+									<a href="bums/LetshohlaJr/The Butterfly Effect/Cover.jpg"><figure><img src="https://www.mediafire.com/view/ark4esnrhh8u6uw/Cover.jpg/file" alt="gallery 1"></figure></a>
 								<div class="item">
 									<h3 class="item-title">LetshohlaJr - <br>The Butterfly Effect</h3>
 									<span class="year">2020</span>
