--- a/albums.html
+++ b/albums.html
@@ -68,7 +68,7 @@
 								</div>
 
 								<div class="filterable-item concert">
-									<a href="dummy/large-gallery/gallery-2.jpg"><figure><img src="https://www.mediafire.com/view/y7r835kihhmoc71/Cover.jpg/file" alt="gallery 2"></figure></a>
+									<a href="https://thuso-ray.github.io/thuso/bums/CeeJay/Alpha/Cover.jpg"><figure><img src="https://thuso-ray.github.io/thuso/bums/CeeJay/Alpha/Cover.jpg" alt="gallery 2"></figure></a>
 									<div class="item">
 									<h3 class="item-title">CeeJay - <br>Alpha</h3>
 									<span class="year">2020</span>
@@ -82,7 +82,7 @@
 								</div>
 								</div>
 								<div class="filterable-item concert">
-									<a href="dummy/large-gallery/gallery-2.jpg"><figure><img src="https://www.mediafire.com/view/7jd846lbhsw2u2n/Cover.jpg/file" alt="gallery 2"></figure></a>
+									<a href="https://thuso-ray.github.io/thuso/bums/DeouTcasT/Accounting Lover/Cover.jpg"><figure><img src="https://thuso-ray.github.io/thuso/bums/DeouTcasT/Accounting Lover/Cover.jpg" alt="gallery 2"></figure></a>
 									<div class="item">
 									<h3 class="item-title">DeouTcasT - <br>Accounting Lover</h3>
 									<span class="year">2020</span>
@@ -95,7 +95,7 @@
 								</div>
 								</div>
 								<div class="filterable-item concert">
-									<a href="dummy/large-gallery/gallery-2.jpg"><figure><img src="https://www.mediafire.com/view/60hzdaxbzrj29ce/Cover.jpg/file" alt="gallery 2"></figure></a>
+									<a href="https://thuso-ray.github.io/thuso/bums/Johnson.K/IDontThinkILost/Cover.jpg"><figure><img src="https://thuso-ray.github.io/thuso/bums/Johnson.K/IDontThinkILost/Cover.jpg" alt="gallery 2"></figure></a>
 									<div class="item">
 									<h3 class="item-title">Johnson K - <br>I Don't Think I've Lost</h3>
 									<span class="year">2020</span>
