--- a/albums.html
+++ b/albums.html
@@ -82,7 +82,7 @@
 								</div>
 								</div>
 								<div class="filterable-item concert">
-									<a href="https://thuso-ray.github.io/thuso/bums/DeouTcasT/Accounting Lover/Cover.jpg"><figure><img src="https://thuso-ray.github.io/thuso/bums/DeouTcasT/Accounting Lover/Cover.jpg" alt="gallery 2"></figure></a>
+									<a href="https://thuso-ray.github.io/thuso/bums/DeouTcasT/Accounting lover/Cover.jpg"><figure><img src="https://thuso-ray.github.io/thuso/bums/DeouTcasT/Accounting lover/Cover.jpg" alt="gallery 2"></figure></a>
 									<div class="item">
 									<h3 class="item-title">DeouTcasT - <br>Accounting Lover</h3>
 									<span class="year">2020</span>
@@ -95,7 +95,7 @@
 								</div>
 								</div>
 								<div class="filterable-item concert">
-									<a href="https://thuso-ray.github.io/thuso/bums/Johnson.K/IDontThinkILost/Cover.jpg"><figure><img src="https://thuso-ray.github.io/thuso/bums/Johnson.K/IDontThinkILost/Cover.jpg" alt="gallery 2"></figure></a>
+									<a href="https://thuso-ray.github.io/thuso/bums/Johnson.K/IDontThinkIveLost/Cover.jpg"><figure><img src="https://thuso-ray.github.io/thuso/bums/Johnson.K/IDontThinkIveLost/Cover.jpg" alt="gallery 2"></figure></a>
 									<div class="item">
 									<h3 class="item-title">Johnson K - <br>I Don't Think I've Lost</h3>
 									<span class="year">2020</span>
